# django-db-cascade

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
django_db_cascade/: deletions.py  fields.py
django_db_cascade/backends/postgresql_psycopg2/: base.py  schema.py
src/django_db_cascade/: deletions.py  fields.py
src/django_db_cascade/backends/postgresql_psycopg2/: base.py  schema.py
